--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@
             <p>LinkedIn: <a href="https://www.linkedin.com/in/miketineo" target="_blank">www.linkedin.com/in/miketineo</a></p>
         </section>
 
+        <section id="contact">
+            <h2>Referals</h2>
+            <p>Warp terminal: https://app.warp.dev/referral/8JM9LK </p>
+        </section>
+
         <section class="ascii-art">
             <pre>
  _______
