--- a/index.html
+++ b/index.html
@@ -108,15 +108,19 @@
         </section>
 
         <section id="contact">
+            <h2>Referals</h2>
+            <p>Here are some referral links of tools that I use daily</p>
+            <a href="https://app.warp.dev/referral/8JM9LK">Warp terminal</a>
+            <p>Warp is a terminal that allows you to run your code in the cloud. It's a great tool for remote development and pair programming.</p>
+            <a href="https://www.hivenet.com/referral?referral_code=9k2cUNGl1TK3HEYknY5EQ7WXNkFaxrNTCm38ipZmozGlVceHvezGrPfsCPd%2FUtfWeAgOXw%3D%3D">HiveDisk</a>
+            <p>HiveDisk is a decentralized cloud storage solution that allows you to store your files securely and privately.</p>
+        </section>
+
+        <section id="contact">
             <h2>Contact</h2>
             <p>Feel free to reach out to me:</p>
             <p>Email: <a href="mailto:miketineo@gmail.com">miketineo@gmail.com</a></p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/miketineo" target="_blank">www.linkedin.com/in/miketineo</a></p>
-        </section>
-
-        <section id="contact">
-            <h2>Referals</h2>
-            <p>Warp terminal: https://app.warp.dev/referral/8JM9LK </p>
         </section>
 
         <section class="ascii-art">
