--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minimalistic Personal Website</title>
+    <title>MikeTineo.com - Miguel Tineo's Personal Website</title>
     <style>
         body {
             font-family: "Courier New", Courier, monospace;
