--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <a href="#projects">Projects</a> | 
             <a href="#experience">Experience</a> | 
             <a href="#contact">Contact</a>
+            <a href="blog.miketineo.com">Blog</a>
         </nav>
     </header>
 
