--- a/about.html
+++ b/about.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/components.css">
 
+    <!-- Theme must load before page renders to prevent flash -->
+    <script src="/js/theme.js"></script>
+
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
     {
@@ -32,6 +35,26 @@
     <nav class="nav" role="navigation" aria-label="Main navigation">
         <div class="nav-container">
             <a href="/" class="nav-logo" aria-label="Miguel Tineo Home">Miguel Tineo</a>
+            <div class="theme-switcher">
+                <button class="theme-btn" data-theme="light" aria-label="Light mode" title="Light mode">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M12 18a6 6 0 100-12 6 6 0 000 12zM12 2v2m0 16v2M4.93 4.93l1.41 1.41m11.32 11.32l1.41 1.41M2 12h2m16 0h2M6.34 17.66l-1.41 1.41M19.07 4.93l-1.41 1.41"/>
+                    </svg>
+                    <span class="theme-label">Light</span>
+                </button>
+                <button class="theme-btn" data-theme="auto" aria-label="System theme" title="System theme">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M21 14h-1V7a3 3 0 00-3-3H7a3 3 0 00-3 3v7H3a1 1 0 00-1 1v2a3 3 0 003 3h14a3 3 0 003-3v-2a1 1 0 00-1-1zM6 7a1 1 0 011-1h10a1 1 0 011 1v7H6V7z"/>
+                    </svg>
+                    <span class="theme-label">Auto</span>
+                </button>
+                <button class="theme-btn" data-theme="dark" aria-label="Dark mode" title="Dark mode">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/>
+                    </svg>
+                    <span class="theme-label">Dark</span>
+                </button>
+            </div>
             <button class="nav-toggle" aria-label="Toggle navigation menu" aria-expanded="false">
                 <span></span>
                 <span></span>
@@ -213,6 +236,47 @@
                         </li>
                     </ul>
                 </div>
+
+                <!-- Mentorship & Professional Network Section -->
+                <section class="section">
+                    <div class="container container-narrow">
+                        <h2>Mentorship & Professional Network</h2>
+                        <p style="color: var(--color-text-secondary); margin-bottom: var(--spacing-lg); text-align: center;">
+                            Available for mentorship on engineering leadership, team building,
+                            and career development. Connect with me on professional platforms:
+                        </p>
+                        <div class="expertise-badges">
+                            <a href="https://mentorcruise.com/mentor/migueltineo/"
+                               class="badge-wrapper"
+                               target="_blank"
+                               rel="noopener">
+                                <img src="https://cdn.mentorcruise.com/img/banner/navy-booking-badge.svg"
+                                     width="240"
+                                     alt="Book a mentorship session on MentorCruise"
+                                     loading="lazy">
+                            </a>
+                            <div class="linkedin-badge">
+                                <a href="https://www.linkedin.com/in/miketineo"
+                                   target="_blank"
+                                   rel="noopener"
+                                   class="badge-link">
+                                    <div class="badge-content">
+                                        <svg class="badge-icon" width="32" height="32" viewBox="0 0 24 24" fill="#0077B5">
+                                            <path d="M20.5 2h-17A1.5 1.5 0 002 3.5v17A1.5 1.5 0 003.5 22h17a1.5 1.5 0 001.5-1.5v-17A1.5 1.5 0 0020.5 2zM8 19H5v-9h3zM6.5 8.25A1.75 1.75 0 118.3 6.5a1.78 1.78 0 01-1.8 1.75zM19 19h-3v-4.74c0-1.42-.6-1.93-1.38-1.93A1.74 1.74 0 0013 14.19a.66.66 0 000 .14V19h-3v-9h2.9v1.3a3.11 3.11 0 012.7-1.4c1.55 0 3.36.86 3.36 3.66z"/>
+                                        </svg>
+                                        <div class="badge-text">
+                                            <span class="badge-title">View LinkedIn Profile</span>
+                                            <span class="badge-subtitle">500+ connections</span>
+                                        </div>
+                                        <svg class="badge-arrow" width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                                            <path d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3"/>
+                                        </svg>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
 
                 <!-- Fun Facts -->
                 <div class="bg-light" style="padding: var(--spacing-lg); border-radius: var(--border-radius);">
