--- a/experience.html
+++ b/experience.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Miguel Tineo's professional experience spanning 10+ years of engineering leadership at Hive, Dutchie, Zendesk, and more.">
+    <meta name="description" content="Miguel Tineo's professional experience spanning 10+ years of engineering leadership at Hivenet, Dutchie, Zendesk, and more.">
     <title>Experience - Miguel Tineo</title>
 
     <!-- Stylesheets -->
@@ -92,7 +92,7 @@
                     </h4>
                     <ul style="margin-left: var(--spacing-lg); color: var(--color-text-secondary);">
                         <li style="margin-bottom: var(--spacing-sm);">
-                            Building decentralized cloud infrastructure leveraging blockchain technology
+                            Building decentralized cloud infrastructure leveraging P2P and open-source technologies
                         </li>
                         <li style="margin-bottom: var(--spacing-sm);">
                             Leading distributed engineering teams across multiple time zones
@@ -128,10 +128,10 @@
                     </h4>
                     <ul style="margin-left: var(--spacing-lg); color: var(--color-text-secondary);">
                         <li style="margin-bottom: var(--spacing-sm);">
-                            Reduced AWS infrastructure costs by 20% through cloud modernization initiatives
+                            Reduced AWS infrastructure costs by 30% through cloud modernization and optimization initiatives
                         </li>
                         <li style="margin-bottom: var(--spacing-sm);">
-                            Scaled distributed services handling millions of e-commerce transactions daily
+                            Scaled distributed services handling millions of POS and e-commerce transactions daily
                         </li>
                         <li style="margin-bottom: var(--spacing-sm);">
                             Built and managed engineering teams across Europe and United States
@@ -159,14 +159,14 @@
                         </div>
                     </div>
                     <p style="margin-bottom: var(--spacing-md); color: var(--color-text-secondary);">
-                        Led engineering strategy and product development for live streaming platform.
+                        Led engineering strategy and product development for live streaming platform for hybrid networking events.
                     </p>
                     <h4 style="font-size: var(--font-size-base); font-weight: 600; margin-bottom: var(--spacing-sm);">
                         Key Achievements:
                     </h4>
                     <ul style="margin-left: var(--spacing-lg); color: var(--color-text-secondary);">
                         <li style="margin-bottom: var(--spacing-sm);">
-                            Drove engineering efforts for Yard.live streaming platform
+                            Drove engineering efforts for Yard.live events platform
                         </li>
                         <li style="margin-bottom: var(--spacing-sm);">
                             Managed third-party vendor relationships and API integrations
